force-app/main/default/objects/ContentVersion/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>가</fullName>
            </value>
            <value>
                <fullName>나</fullName>
            </value>
            <value>
                <fullName>다</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>