force-app/main/default/objects/ContentVersion/fields/RelFiles__Category__c.field-meta.xml
<CustomField>
    <fullName>RelFiles__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>